feat(routing): Wip on next js routing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,12 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
 }
 
 body {
   font-family: 'Open Sans', 'Lato', sans-serif;
+  margin: 0;
 }
 
 h1,
@@ -15,4 +17,12 @@ h4,
 h5,
 h6 {
   font-family: 'Lato', sans-serif;
+}
+
+.center {
+  text-align: center;
+}
+
+li {
+  list-style: none;
 }
